total price and discount functionality complete

--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deshi Deals || Home</title>
+    <!-- favicon -->
+     <link rel="icon" href="./assets/logo.png">
 
     <!-- custom css -->
     <link rel="stylesheet" href="./style.css" />
 
     <!-- icon cdn -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
+      integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- tailwind and daisy ui  cdn -->
     <link
@@ -20,8 +28,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
 
-
-   
   <body class="font-work-sans bg-[rgba(17,17,17,0.05)]">
     <!-- header -->
     <header class="bg-white">
@@ -70,18 +76,16 @@
       <div class="grid grid-cols-12 gap-24">
         <!-- product section -->
         <section class="col-span-9">
-          <h2 class="text-[40px] font-semibold text-[#111111] mb-8">Kitchenware</h2>
+          <!-- kitchenware -->
+          <h2 class="text-[40px] font-semibold text-[#111111] mb-8">
+            Kitchenware
+          </h2>
           <!-- container of products -->
           <div id="products-container" class="grid grid-cols-3 gap-6">
-
             <!-- product 1 -->
             <div class="card bg-base-100 max-w-80 shadow-sm">
               <figure class="m-4 rounded-xl bg-slate-300">
-                <img
-                  src="./assets/kitchen-1.png"
-                  alt="Shoes"
-                  class=" py-8 "
-                />
+                <img src="./assets/kitchen-1.png" alt="Shoes" class="py-8" />
               </figure>
               <div class="flex flex-col gap-1 m-4 items-center text-center">
                 <p class="text-xl">
@@ -93,10 +97,12 @@
                 </p>
                 <h2 class="card-title">K. Accessories</h2>
                 <p class="text-[rgba(17,17,17,0.5)] mb-3">
-                  <span>39.00</span> TK
+                  <span>39.50</span> TK
                 </p>
                 <div class="card-actions w-full">
-                  <button class="btn bg-[#E527B2] w-full text-white block">Buy Now</button>
+                  <button class="products-btn btn bg-[#E527B2] w-full text-white block">
+                    Add to Cart
+                  </button>
                 </div>
               </div>
             </div>
@@ -104,11 +110,7 @@
             <!-- product 2 -->
             <div class="card bg-base-100 max-w-80 shadow-sm">
               <figure class="m-4 rounded-xl bg-slate-300">
-                <img
-                  src="./assets/kitchen-2.png"
-                  alt="Shoes"
-                  class=" py-8 "
-                />
+                <img src="./assets/kitchen-2.png" alt="Shoes" class="py-8" />
               </figure>
               <div class="flex flex-col gap-1 m-4 items-center text-center">
                 <p class="text-xl">
@@ -123,7 +125,9 @@
                   <span>150.00</span> TK
                 </p>
                 <div class="card-actions w-full">
-                  <button class="btn bg-[#E527B2] w-full text-white block">Buy Now</button>
+                  <button class="products-btn btn bg-[#E527B2] w-full text-white block">
+                    Add to Cart
+                  </button>
                 </div>
               </div>
             </div>
@@ -131,15 +135,10 @@
             <!-- product 3 -->
             <div class="card bg-base-100 max-w-80 shadow-sm">
               <figure class="m-4 rounded-xl bg-slate-300">
-                <img
-                  src="./assets/kitchen-3.png"
-                  alt="Shoes"
-                  class=" py-8 "
-                />
+                <img src="./assets/kitchen-3.png" alt="Shoes" class="py-8" />
               </figure>
               <div class="flex flex-col gap-1 m-4 items-center text-center">
                 <p class="text-xl">
-                
                   <i class="ri-star-line text-yellow-400"></i>
                   <i class="ri-star-line text-yellow-400"></i>
                   <i class="ri-star-line text-yellow-400"></i>
@@ -151,7 +150,173 @@
                   <span>50.00</span> TK
                 </p>
                 <div class="card-actions w-full">
-                  <button class="btn bg-[#E527B2] w-full text-white block">Buy Now</button>
+                  <button class="products-btn btn bg-[#E527B2] w-full text-white block">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- sportswear -->
+          <h2 class="text-[40px] font-semibold text-[#111111] mb-8 mt-14">
+            Sportswear
+          </h2>
+          <!-- container of products -->
+          <div  class="grid grid-cols-3 gap-6">
+            <!-- product 1 -->
+            <div class="card bg-base-100 max-w-80 shadow-sm">
+              <figure class="m-4 rounded-xl bg-slate-300">
+                <img src="./assets/sports-1.png" alt="Shoes" class="py-8" />
+              </figure>
+              <div class="flex flex-col gap-1 m-4 items-center text-center">
+                <p class="text-xl">
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                </p>
+                <h2 class="card-title">Sports Back Cap</h2>
+                <p class="text-[rgba(17,17,17,0.5)] mb-3">
+                  <span>80.00</span> TK
+                </p>
+                <div class="card-actions w-full">
+                  <button class="products-btn btn bg-[#E527B2] w-full text-white block">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- product 2 -->
+            <div class="card bg-base-100 max-w-80 shadow-sm">
+              <figure class="m-4 rounded-xl bg-slate-300">
+                <img src="./assets/sports-2.png" alt="Shoes" class="py-8" />
+              </figure>
+              <div class="flex flex-col gap-1 m-4 items-center text-center">
+                <p class="text-xl">
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                </p>
+                <h2 class="card-title">Full Jersey Set</h2>
+                <p class="text-[rgba(17,17,17,0.5)] mb-3">
+                  <span>150.00</span> TK
+                </p>
+                <div class="card-actions w-full">
+                  <button class="products-btn btn bg-[#E527B2] w-full text-white block">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- product 3 -->
+            <div class="card bg-base-100 max-w-80 shadow-sm">
+              <figure class="m-4 rounded-xl bg-slate-300">
+                <img src="./assets/sports-3.png" alt="Shoes" class="py-8" />
+              </figure>
+              <div class="flex flex-col gap-1 m-4 items-center text-center">
+                <p class="text-xl">
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                </p>
+                <h2 class="card-title">Sports cates</h2>
+                <p class="text-[rgba(17,17,17,0.5)] mb-3">
+                  <span>100.00</span> TK
+                </p>
+                <div class="card-actions w-full">
+                  <button class="products-btn btn bg-[#E527B2] w-full text-white block">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Furniture -->
+          <h2 class="text-[40px] font-semibold text-[#111111] mb-8 mt-14">
+            Furniture
+          </h2>
+          <!-- container of products -->
+          <div class="grid grid-cols-3 gap-6">
+            <!-- product 1 -->
+            <div class="card bg-base-100 max-w-80 shadow-sm">
+              <figure class="m-4 rounded-xl bg-slate-300">
+                <img src="./assets/furniture-1.png" alt="Shoes" class="py-8" />
+              </figure>
+              <div class="flex flex-col gap-1 m-4 items-center text-center">
+                <p class="text-xl">
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                </p>
+                <h2 class="card-title">Single Relax Chair</h2>
+                <p class="text-[rgba(17,17,17,0.5)] mb-3">
+                  <span>1500.00</span> TK
+                </p>
+                <div class="card-actions w-full">
+                  <button class="products-btn btn bg-[#E527B2] w-full text-white block">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- product 2 -->
+            <div class="card bg-base-100 max-w-80 shadow-sm">
+              <figure class="m-4 rounded-xl bg-slate-300">
+                <img src="./assets/furniture-2.png" alt="Shoes" class="py-8" />
+              </figure>
+              <div class="flex flex-col gap-1 m-4 items-center text-center">
+                <p class="text-xl">
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                </p>
+                <h2 class="card-title">Children playSet</h2>
+                <p class="text-[rgba(17,17,17,0.5)] mb-3">
+                  <span>280.00</span> TK
+                </p>
+                <div class="card-actions w-full">
+                  <button class="products-btn btn bg-[#E527B2] w-full text-white block">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- product 3 -->
+            <div class="card bg-base-100 max-w-80 shadow-sm">
+              <figure class="m-4 rounded-xl bg-slate-300">
+                <img src="./assets/furniture-3.png" alt="Shoes" class="py-8" />
+              </figure>
+              <div class="flex flex-col gap-1 m-4 items-center text-center">
+                <p class="text-xl">
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-fill text-xl text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                  <i class="ri-star-line text-yellow-400"></i>
+                </p>
+                <h2 class="card-title">Flexible Sofa</h2>
+                <p class="text-[rgba(17,17,17,0.5)] mb-3">
+                  <span>334.00</span> TK
+                </p>
+                <div class="card-actions w-full">
+                  <button class="products-btn btn bg-[#E527B2] w-full text-white block">
+                    Add to Cart
+                  </button>
                 </div>
               </div>
             </div>
@@ -159,8 +324,43 @@
         </section>
 
         <!-- aside cart section  -->
-        <aside class="bg-green-400 col-span-3">hello</aside>
+        <aside class="col-span-3">
+          <!-- coupon box  -->
+          <div class="bg-white mb-11 p-5 max-w[412px] rounded-sm">
+            <h2>Have coupon?</h2>
+            <div class="join mt-3">
+              <input id="coupon-value" class="input join-item border-none focus:outline-none shadow" placeholder="Coupon Code" />
+              <button id="coupon-btn"  class="px-4 cursor-pointer shadow join-item bg-[#E527B2] text-white">Apply</button>
+            </div>
+          </div>
+
+          <!-- cart aside  -->
+          <div class="h-[90%] p-8 bg-white rounded-sm">
+            <!-- product list  -->
+            <ul class="pb-3 border-b-2 border-gray-300">
+              <li class="flex items-center justify-between bg-[#F4F1F1] rounded-md py-2 ">
+                <img src="./assets/kitchen-1.png" class="w-12" alt="">
+                <div>
+                  <h5>K. Accessories</h5>
+                  <p>500 Tk</p>
+                </div>
+              </li>
+            </ul>
+
+            <!-- total, discount and total -->
+             <div class="pb-3 pt-3 border-b-2 border-gray-300">
+              <p class="font-semibold">Total Price: <span id="total-price" class="font-normal">00</span>Tk</p>
+              <p class="font-semibold">Discount: <span id="discount-text" class="font-normal">00</span>Tk</p>
+              <p class="font-semibold">Total: <span id="total" class="font-normal">00</span>Tk</p>
+             </div>
+
+             <button class="py-2 px-6 rounded-sm mt-3 cursor-pointer bg-[#E527B2] w-full text-white">Make Purchase</button>
+          </div>
+        </aside>
       </div>
     </main>
+
+    <!-- external script  -->
+     <script src="./script.js"></script>
   </body>
 </html>
